--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "type": "module",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "node-telegram-bot-api": "^0.61.0",
     "minecraft-server-util": "^5.4.0",
     "node-cron": "^3.0.3"
